整理swagger注释
