# server/api/v1/system/sys_user.go
@@ -16,13 +16,12 @@ import (
 
 // ChangePassword
 //
-//	@Tags			登陆注册
-//	@Summary		更改密码
-//	@Description	更改密码
-//	@ID				/v1/user/changePassword
-//	@Accept			json
-//	@Produce		json
-//	@Router			/v1/api/changePassword [post]
+// @Tags		登陆注册
+// @Summary		更改密码
+// @Description	更改密码
+// @Accept		json
+// @Produce		json
+// @Router		/v1/api/changePassword [post]
 func (b *BaseApi) ChangePassword(ctx *gin.Context) {
 	var changePassword systemReq.ChangePasswordParam
 	_ = ctx.ShouldBindJSON(&changePassword)
@@ -47,14 +46,13 @@ func (b *BaseApi) GetUserInfo(ctx *gin.Context) {
 
 // Register
 //
-//	@Tags			登陆注册
-//	@Summary		用户注册
-//	@Description	用户注册
-//	@ID				/v1/api/admin/register
-//	@Accept			json
-//	@Produce		application/json
-//	@Param			data	body	request.RegisterParam	true	"body"	#[username,密码,手机号码]	body	[string,string,string]	[required,required,required]	"[system.SysUser]"
-//	@Router			/v1/api/admin/register [post]
+// @Tags		登陆注册
+// @Summary		用户注册
+// @Description	用户注册
+// @Accept		json
+// @Produce		application/json
+// @Param		data	body	request.RegisterParam	true	"登录请求数据"
+// @Router		/v1/api/admin/register [post]
 func (b *BaseApi) Register(ctx *gin.Context) {
 	// 绑定参数
 	var registerParam systemReq.RegisterParam
@@ -68,30 +66,26 @@ func (b *BaseApi) Register(ctx *gin.Context) {
 }
 
 // Logout
-//
-//	@Tags			登陆注册
-//	@Summary		用户退出
-//	@Description	退出登录
-//	@ID				/v1/api/admin/logout
-//	@Accept			json
-//	@Produce		json
-//	@Param			data	body	request.LoginParam	true	"用户名,密码,验证码,验证码ID"
-//	@Router			/v1/api/admin/logout [post]
+// @Tags		登陆注册
+// @Summary		用户退出
+// @Description	退出登录
+// @Accept		json
+// @Produce		json
+// @Param		data	body	request.LoginParam	true	"用户名,密码,验证码,验证码ID"
+// @Router		/v1/api/admin/logout [post]
 func (b *BaseApi) Logout(c *gin.Context) {
 
 }
 
 // Login
-//
-//		@Tags			登陆注册
-//		@Summary		用户登录
-//		@Description	用户登录
-//		@ID				/v1/api/admin/login
-//		@Accept			json
-//		@Produce		application/json
-//		@Param			data	body	request.LoginParam	true	"用户名,密码,验证码,验证码ID"
-//	 	@Router			/v1/api/admin/login [post]
-//		@Success  		200 {object} response.Response(data=systemRes.LoginResponse, msg=string) "返回包括用户信息，token过期时间"
+// @Tags		登陆注册
+// @Summary		用户登录
+// @Description	用户登录
+// @Accept		json
+// @Produce		application/json
+// @Param		data	body		request.LoginParam	true	"用户名,密码,验证码,验证码ID"
+// @Success  	200 	{object} 	response.Response(data=systemRes.LoginResponse, msg=string) "返回包括用户信息，token过期时间"
+// @Router		/v1/api/admin/login [post]
 func (b *BaseApi) Login(ctx *gin.Context) {
 	var loginParam systemReq.LoginParam
 	//key := ctx.ClientIP()
@@ -207,8 +201,8 @@ func (b *BaseApi) GetUserList(c *gin.Context) {
 // @Security  ApiKeyAuth
 // @accept    application/json
 // @Produce   application/json
-// @Param     data  body      system.SysUser                                             true  "ID, 用户名, 昵称, 头像链接"
-// @Success   200   {object}  response.Response{data=map[string]interface{},msg=string}  "设置用户信息"
+// @Param     data  body		systemReq.ChangeUserInfo			true  "ID, 用户名, 昵称, 头像链接"
+// @Success   200   {object}  	response.Response{data=map[string]interface{},msg=string}  "设置用户信息"
 // @Router    /user/setUserInfo [put]
 func (b *BaseApi) SetUserInfo(c *gin.Context) {
 	var user systemReq.ChangeUserInfo
