# server/router/system/sys_menu.go
@@ -13,7 +13,10 @@ func (m *MenuRouter) InitMenuRouter(Router *gin.RouterGroup) (R gin.IRoutes) {
 	menuRouterWithoutRecord := Router.Group("menu")
 	menuApi := v1.ApiGroupApp.SystemApiGroup.MenuApi
 	{
-		menuRouter.POST("addMenu", menuApi.AddMenu) //新增菜单
+		menuRouter.POST("addMenu", menuApi.AddMenu)              //新增菜单
+		menuRouter.DELETE("deleteMenu", menuApi.DeleteMenuByIds) //删除菜单
+		menuRouter.PUT("updateMenu", menuApi.UpdateMenu)         //更新菜单
+		menuRouter.GET("getMenuById", menuApi.GetMenuById)       //获取菜单详情
 	}
 
 	{
